--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
+google-cloud-dialogflow==2.43.0
+google-cloud-api-keys==0.6.0
 python-telegram-bot==13.15
 standard-imghdr==3.13.0
 urllib3==1.26.15
 environs~=14.5.0
+requests~=2.32.5
 vk_api==11.10.0
